--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.activemq.pool.use-anonymous-producers=true
 spring.jms.listener.acknowledge-mode=auto
 spring.jms.listener.auto-startup=true
 
-# REST
+# HATEOAS root 
 spring.data.rest.base-path=/api
