--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/Test?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=PlayGround@2018
+spring.datasource.password=}q39[nW~(a-a=qYam^?>
 
 # ddl && hibernate
 spring.jpa.hibernate.ddl-auto=update
